# learn-rust-by-crates

./: .travis.yml  README.md  appveyor.yml
hello-borrowing/bin-hello/: Cargo.toml  README.md  hello.rs
hello-borrowing/bin-hello/archiv/: closure_kw_move.rs  closure_string.rs  for_arr.rs  mut_count.rs  ref_deref.rs  string_type_str.rs  to_do_string_type.rs
hello-borrowing/bin-hello/examples/: a.rs  b.rs  box_simple.rs  c.rs  clone_array.rs  clone_struct.rs  closure_move_vec.rs  closure_string.rs  closure_type.rs  closure_vec.rs  dbg_marco.rs  expand_struct.rs  for_arr.rs  for_vec.rs  for_vec_iter.rs  kw_fn.rs  kw_fn_vec_u8.rs  kw_let.rs  kw_let_mut.rs  kw_mut.rs  kw_mut_copy.rs  kw_mut_fn.rs  lrbr.code-workspace  move_tuple.rs  move_vec.rs  mut.rs  mut_fn.rs  mut_string_type.rs  mut_struct_type.rs  new_var.rs  stack_head.rs  string_mut_type.rs  string_ref_thread.rs  string_thread.rs  string_type.rs  string_type_str.rs  use_clone_array.rs  use_closure.rs  use_convert_string_str.rs  use_expand_let.rs  (+12 more)
hello-borrowing/bin-hello/examples/closure/: immut_string.rs  kw_move.rs  main.rs  move_vec.rs  mut_move.rs
hello-borrowing/bin-hello/examples/dbg/: main.rs  mut_macro.rs
hello-borrowing/bin-hello/examples/expand/: clone_derive.rs  clone_struct.rs  main.rs  move_vec.rs  struct_str.rs  struct_string.rs  struct_u8.rs  use_struct.rs  use_struct_derive.rs  use_u8.rs
hello-borrowing/bin-hello/examples/for_loop/: for_arr.rs  for_enumerate.rs  for_into_iter.rs  for_iter_mut.rs  for_next.rs  for_vec.rs  for_vec_iter.rs  main.rs
hello-borrowing/bin-hello/examples/kw_fn/: main.rs  vec_str.rs  vec_u8.rs
hello-borrowing/bin-hello/examples/mut_base/: main.rs  mut_count.rs  mut_ref.rs  use_let_mut.rs
hello-borrowing/bin-hello/examples/mut_fn/: a.rs  base_str.rs  base_string.rs  double_refs.rs  main.rs
hello-borrowing/bin-hello/examples/mut_immut/: main.rs  mut_string.rs  ref_str.rs
hello-borrowing/bin-hello/examples/mut_var_sized/: main.rs  string_ref.rs  string_refs.rs  struct_ref.rs
hello-borrowing/bin-hello/examples/string_type/: main.rs  string_str.rs
hello-borrowing/bin-hello/src/: $cmds.txt  features.rs  kw_fn_err.txt  lib.rs  lib.txt  readme.txt
hello-borrowing/bin-hello/src/features/: rs_files.rs
hello-borrowing/bin-local-hello/: Cargo.toml
hello-borrowing/bin-local-hello/examples/: use_clone_array.rs  use_convert_string_str.rs  use_kw_fn_u8.rs  use_prettytable.rs  use_raw_pointer.rs  use_raw_pointer_str.rs  use_raw_pointer_string.rs  use_ref_and.rs  use_references_simple.rs  use_str_type.rs  use_u8_type.rs
hello-borrowing/bin-local-hello/examples/hallo/: main.rs
hello-borrowing/bin-local-hello/examples/hello/: main.rs
hello-borrowing/bin-local-hello/examples/usage/: main.rs
hello-mod-trait/: Cargo.toml  README.md
hello-mod-trait/bin-hello/: Cargo.toml
hello-mod-trait/bin-hello/src/: main.rs
hello-mod-trait/bin-local-hello/: Cargo.toml
hello-mod-trait/bin-local-hello/src/: main.rs
hello-mod-trait/bin-local-hello/tests/: type_both_hello.rs
hello-mod-trait/lib-hello/: .rustc_info.json  Cargo.toml  README.md
hello-mod-trait/lib-hello/debug/: bin-local-hello.dSYM  bin_local_hello-c94704004633ad33  bin_local_hello-c94704004633ad33.dSYM  u_for_box_static_hello-260ec2590f8dc965  u_for_mod_bare-fc1a957952cad649  u_for_mod_trait_fn-9b2c97cb11cb743e  u_for_mod_trait_instance-d257414b2e44d6f7
hello-mod-trait/lib-hello/debug/examples/: bare_hello  bare_hello-9a125826b9b75b50.d  bare_hello.dSYM  box_dynamic_hello  box_dynamic_hello-a42c0c456d0d8ba0.d  box_dynamic_hello.dSYM  box_static_hello-dc603f9bd80961cc  box_static_hello-dc603f9bd80961cc.d  box_static_hello.dSYM  generics_fn_hello-32576c50165db6a9  generics_fn_hello-32576c50165db6a9.d  generics_fn_hello.dSYM  generics_impl_hello  generics_impl_hello-c96f208debe5d45e.d  generics_impl_hello.dSYM  generics_trait_hello  generics_trait_hello-2b5441ebe271a9d7.d  generics_trait_hello.dSYM  generics_type_hello  generics_type_hello-cb4c6cf3b9b275a8.d  generics_type_hello.dSYM  simple_dynamic_dispatch-11c303c914c6c427  simple_dynamic_dispatch-11c303c914c6c427.d  simple_dynamic_dispatch.dSYM  simple_static_dispatch-08c9a17070f8ea8f  simple_static_dispatch-08c9a17070f8ea8f.d  (+14 more)
hello-mod-trait/lib-hello/examples/: bare_hello.rs  box_dynamic_hello.rs  box_static_hello.rs  generics_fn_hello.rs  generics_impl_hello.rs  generics_trait_hello.rs  generics_type_hello.rs  hello.rs  mod_hello.rs  simple_dynamic_dispatch.rs  simple_static_dispatch.rs  trait_dispatch_abstract.rs  trait_dispatch_concrete.rs  trait_fn_hello.rs  trait_instance_hello.rs  trait_where_hello.rs
hello-mod-trait/lib-hello/src/: lib.rs  mod_box_dynamic_fn.rs  mod_box_static_fn.rs  mod_dynamic_fn.rs  mod_static_fn.rs  mod_where_fn.rs
hello-mod-trait/lib-hello/tests/: box_dynamic_hello.rs  box_static_hello.rs  hello.rs  mod_bare.rs  mod_hello.rs  mod_trait.rs  u_for_box_dynamic_hello.rs  u_for_box_static_hello.rs  u_for_mod_bare.rs  u_for_mod_trait_fn.rs  u_for_mod_trait_instance.rs
hello-trait/bin-hello/: Cargo.toml
hello-trait/bin-hello/src/: local_main.rs  main.rs
hello-trait/lib-hello/: Cargo.toml  README.md
hello-trait/lib-hello/examples/: function_instance.rs  function_method.rs  function_methods.rs  hello.rs  method_function.rs  pub_field.rs  trait.rs  trait_default.rs  trait_with_default.rs  trait_with_default_method.rs  tuple_struct.rs
hello-trait/lib-hello/src/: lib.rs
hello-trait/lib-hello/tests/: hello.rs  mod_hello.rs  u_hello_for_both_traits.rs  u_hello_for_canal.rs  u_hello_for_kanal.rs  u_hello_for_struct.rs
hello-world/bin-hello/: Cargo.toml
hello-world/bin-hello/src/: main.rs
hello-world/bin-hello/tests/: i_hello.rs
hello-world/lib-extern/: Cargo.toml  README.md
hello-world/lib-extern/src/: lib.rs
hello-world/lib-extern/tests/: u_hello.rs
hello-world/lib-hello/: Cargo.toml  README.md
hello-world/lib-hello/examples/: hello.rs  i_hello.rs  main.rs  u_hello.rs
hello-world/lib-hello/private/: tests.rs
hello-world/lib-hello/src/: lib.rs
hello-world/lib-hello/tests/: hello.rs  i_hello.rs  u_hello.rs
(+604 files in other folders)
