[package]
name = "borrowing_exerci"
version = "0.4.51"
authors = ["cnruby <gudao.luo@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cnruby/learn-rust-by-crates/tree/master/hello-borrowing"
homepage = "https://crates.io/crates/borrowing_exerci"
documentation = "https://cnruby.github.io/learn-rust-by-crates/hello-borrowing/borrowing_exerci/"
categories = ["development-tools::testing"]
description = "how to understand the borrowing in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aide"
path = "src/lib.rs"

[dependencies]
run_script = "0.3.2"
clap = {version = "2.33.0", features = ["yaml"]}
bat = "0.12.1"
regex = "1.3.1"
owning_ref = "0.4.0"
prettytable-rs = "^0.10"

[features]
ok = []
cp = []
okay = []
okey = []
err = []
err_01 = []
err_02 = []
err_03 = []
err_04 = []
err_05 = []
err_06 = []
err_07 = []
err_08 = []
err_09 = []
err_10 = []
err_11 = []

#[[example]]
# example.path
#name = "kw_fn"
#crate-type = ["lib", "bin"]
#crate-type = ["bin"]

#[[example]]
#name = "box_simple"
#path = "examples/immut/box_simple.rs"

#[[example]]
#name = "box"
#path = "examples/immut/bin/box.rs"
#crate-type = ["bin"]