[package]
name = "bin-local-borrowing"
version = "0.1.0"
authors = ["Gudao Luo <gudao.luo@gmail.com>"]
edition = "2018"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "^0.10"
hello_borrowing = { path = "../lib-hello"}
