[package]
name = "hello-trait"
version = "0.2.6"
authors = ["Gudao Luo <gudao.luo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://crates.io/crates/trait_exerci
# change the follow version to current version
trait_exerci = "0.2.6"