[package]
name = "trait_exerci"
version = "0.2.3"
authors = ["Gudao Luo <gudao.luo@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cnruby/learn-rust-by-crates/tree/master/hello-trait"
homepage = "https://crates.io/crates/trait_exerci"
documentation = "https://cnruby.github.io/learn-rust-by-crates/hello-trait/trait_exerci/"
description = "how to understand the trait for rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
