[package]
name = "hello-bin"
version = "0.2.1"
authors = ["cnruby <gudao.luo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hello_exercism = { path = "../lib-hello" }
# https://crates.io/crates/hello_exercism
# cargo build
# cargo run
hello_exercism = "0.2.2"
