[package]
name = "hello_extern"
version = "0.1.1"
authors = ["cnruby <gudao.luo@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cnruby/learn-rust-by-crates/tree/master/hello-world"
homepage = "https://crates.io/crates/hello_extern"
documentation = "https://cnruby.github.io/learn-rust-by-crates/hello-world/hello_extern/"
description = "how to use an external crate"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
