[package]
name = "hello_exercism"
version = "0.1.9"
authors = ["cnruby <gudao.luo@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cnruby/exercism.io/tree/master/hello-world"
homepage = "https://crates.io/crates/hello_exercism"
documentation = "https://cnruby.github.io/exercism.io/"
description = "how to create an own crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
